# hackathon-project

./: .gitignore  CLAUDE.md  README.md
.claude/agents/: auth-expert.md  backend-expert.md  chatkit-backend-engineer.md  chatkit-frontend-engineer.md  database-expert.md  frontend-expert.md  fullstack-architect.md  ui-ux-expert.md
.github/workflows/: deploy-doks.yml
.specify/memory/: constitution.md
history/adr/: 0001-monolithic-helm-chart-for-multi-service-deployment.md  0002-minikube-docker-daemon-for-local-development.md  0003-nodeport-service-exposure-for-development-environment.md
phase-1-console/: .gitignore  README.md  pyproject.toml
phase-1-console/src/todo/: __init__.py  main.py  manager.py  models.py  ui.py
phase-1-console/tests/: __init__.py  test_manager.py  test_models.py  test_ui.py
phase-2-web/: .gitignore  CLAUDE.md  docker-compose.yml
phase-2-web/backend/: .dockerignore  .env.example  CLAUDE.md  pyproject.toml
phase-2-web/frontend/: package.json  pnpm-lock.yaml
phase-3-chatbot/backend/: .env.example  Dockerfile  README.md  pyproject.toml
phase-3-chatbot/backend/src/: auth.py  main.py
phase-3-chatbot/backend/src/models/: label.py
phase-3-chatbot/backend/src/routers/: __init__.py  chatkit.py
phase-3-chatbot/backend/src/schemas/: chat.py  image.py  label.py
phase-3-chatbot/backend/src/services/: chatkit_store.py  r2.py
phase-3-chatbot/backend/src/widgets/: __init__.py
phase-3-chatbot/frontend/: .dockerignore  Dockerfile  next.config.ts  package.json
phase-4-kubernetes-deployment/: .gitignore  README.md
phase-4-kubernetes-deployment/backend/: .dockerignore  Dockerfile  pyproject.toml
phase-4-kubernetes-deployment/frontend/: CLAUDE.md  next.config.ts  pnpm-lock.yaml
phase-5-cloud/: .env.example  Caddyfile  docker-compose.yml
phase-5-cloud/backend/: migrate_part_b.py
phase-5-cloud/frontend/: Dockerfile  next.config.ts
phase-5-cloud/k8s/: README.md  caddy-ingress.yaml
phase-5-cloud/notification-service/: CLAUDE.md  Dockerfile  README.md  generate_vapid.py  pyproject.toml
phase-5-cloud/notification-service/src/: __init__.py  config.py  handlers.py  main.py  push.py
specs/001-console-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fullstack-web-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ai-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-kubernetes-deployment/: plan.md  spec.md  tasks.md
specs/005-cloud-deployment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+267 files in other folders)
