[project]
name = "todo"
version = "0.1.0"
description = "In-memory console Todo application - Phase 1 of Evolution of Todo"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
todo = "todo.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/todo"]
